--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,79 +1,12 @@
-<!doctype html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Effe - Blog</title>
-<link rel="shortcut icon" href="favicon.ico" />
-<!-- Load CSS -->
-<link href="static/css/style.css" rel="stylesheet" type="text/css" />
-<!-- Load Fonts -->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic" type="text/css" />
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold" type="text/css" />
-<!-- Load jQuery library -->
-<script type="text/javascript" src="static/js/jquery-1.6.2.min.js"></script>
-<!-- Load custom js -->
-<script type="text/javascript" src="static/js/panelslide.js"></script>
-<script type="text/javascript" src="static/js/custom.js"></script>
-<!-- Load topcontrol js -->
-<script type="text/javascript" src="static/js/scrolltopcontrol.js"></script>
-<!-- Load NIVO Slider -->
-<link rel="stylesheet" href="static/css/nivo-slider.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="static/css/nivo-theme.css" type="text/css" media="screen" />
-<script src="static/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
-<script src="static/js/nivo-options.js" type="text/javascript"></script>
-<!-- Load fancybox -->
-<script type="text/javascript" src="static/js/jquery.fancybox-1.3.4.pack.js"></script>
-<script type="text/javascript" src="static/js/jquery.easing-1.3.pack.js"></script>
-<script type="text/javascript" src="static/js/jquery.mousewheel-3.0.4.pack.js"></script>
-<link rel="stylesheet" href="static/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-</head>
-<body>
-<!--This is the START of the header-->
-<div id="topcontrol" style="position: fixed; bottom: 5px; left: 960px; opacity: 1; cursor: pointer;" title="Go to Top"></div>
-<div id="header-wrapper">
-  <div id="header">
-    <div id="logo"><a href="index.html"><img src="static/images/logo.png" width="100" height="80" alt="logo" /></a></div>
-    <div id="header-text">
-      <h4>This is our blog, check out our latest posts!</h4>
-      <h6><a href="index.html">Home</a> → Blog</h6>
-    </div>
-  </div>
-</div>
-<!--END of header-->
-<!--This is the START of the menu-->
-<div id="menu-wrapper">
-  <div id="main-menu">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a class="selected" href="blog.html">Blog  →</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="features.html">Features</a></li>
-    </ul>
-  </div>
-	<!--This is the START of the footer-->
-	<div id="footer">
-		<div id="social-box">
-			<ul>
-				<li>
-					<div class="facebook"><a href="#"></a></div>
-				</li>
-				<li>
-					<div class="twitter"><a href="#"></a></div>
-				</li>
-				<li>
-					<div class="rss"><a href="#"></a></div>
-				</li>
-			</ul>
-		</div>
-		<h6>Copyright © 2011 - effe</h6>
-	</div>
-	<!--END of footer-->
-</div>
-<!--END of menu-->
-<!--This is the START of the content-->
-<div id="content">
+{% set section_name = "blog" %}
+
+{% extends "base.html" %}
+
+{% block title %} Effe - Blog {% endblock %}
+
+{% block section_header_text %}This is our blog, check out our latest posts!{% endblock %}
+
+{% block content %}
   <!--This is the START of the blog section-->
   <div id="blog">
     <div class="blog-item"> <a href="blog-single.html"><img class="single_image" src="static/images/blog/thumbs/blog1.jpg" width="280" height="180" alt="blog1" /></a>
@@ -155,6 +88,4 @@
 		<h1>Thanks for that!</h1>
 	</div>
 	<!--END of follow section-->
-</div>
-</body>
-</html>
+{% endblock content %}
