--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,11 @@
-<!doctype html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Effe - Personal Blog</title>
-<link rel="shortcut icon" href="favicon.ico" />
-<!-- Load CSS -->
-<link href="static/css/style.css" rel="stylesheet" type="text/css" />
-<!-- Load Fonts -->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic" type="text/css" />
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold" type="text/css" />
-<!-- Load jQuery library -->
-<script type="text/javascript" src="static/js/jquery-1.6.2.min.js"></script>
-<!-- Load custom js -->
-<script type="text/javascript" src="static/js/panelslide.js"></script>
-<script type="text/javascript" src="static/js/custom.js"></script>
-<!-- Load topcontrol js -->
-<script type="text/javascript" src="static/js/scrolltopcontrol.js"></script>
-<!-- Load NIVO Slider -->
-<link rel="stylesheet" href="static/css/nivo-slider.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="static/css/nivo-theme.css" type="text/css" media="screen" />
-<script src="static/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
-<script src="static/js/nivo-options.js" type="text/javascript"></script>
-<!-- Load fancybox -->
-<script type="text/javascript" src="static/js/jquery.fancybox-1.3.4.pack.js"></script>
-<script type="text/javascript" src="static/js/jquery.easing-1.3.pack.js"></script>
-<script type="text/javascript" src="static/jss/jquery.mousewheel-3.0.4.pack.js"></script>
-<link rel="stylesheet" href="static/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-</head>
-<body>
-<!--This is the START of the header-->
-<div id="topcontrol" style="position: fixed; bottom: 5px; left: 960px; opacity: 1; cursor: pointer;" title="Go to Top"></div>
-<div id="header-wrapper">
-	<div id="header">
-		<div id="logo"> <a href="index.html"><img src="static/images/logo.png" width="100" height="80" alt="logo" /></a> </div>
-		<div id="header-text">
-			<h4>We make a bunch of cool stuff, have a look around!</h4>
-			<h6><a href="index.html">Home</a></h6>
-		</div>
-	</div>
-</div>
-<!--END of header-->
-<!--This is the START of the menu-->
-<div id="menu-wrapper">
-	<div id="main-menu">
-		<ul>
-			<li><a class="selected" href="index.html">Home →</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="blog.html">Blog</a></li>
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="features.html">Features</a></li>
-		</ul>
-	</div>
-	<!--This is the START of the footer-->
-	<div id="footer">
-		<div id="social-box">
-			<ul>
-				<li>
-					<div class="facebook"><a href="#"></a></div>
-				</li>
-				<li>
-					<div class="twitter"><a href="#"></a></div>
-				</li>
-				<li>
-					<div class="rss"><a href="#"></a></div>
-				</li>
-			</ul>
-		</div>
-		<h6>Copyright © 2011 - effe</h6>
-	</div>
-	<!--END of footer-->
-</div>
-<!--END of menu-->
-<!--This is the START of the content-->
-<div id="content">
+{% set section_name = "home" %}
+
+{% extends "base.html" %}
+
+{% block title %}Effe - Personal Blog{% endblock %}
+{% block section_header_text %}We make a bunch of cool stuff, have a look around!{% endblock  %}
+
+{% block content %}
 	<!--This is the START of the NIVO slider-->
 	<div class="slider-wrapper theme-effe">
 		<div id="slider" class="nivoSlider"> <img src="static/images/slider/slide1.jpg" alt="" title="#img1" /> <img src="static/images/slider/slide2.jpg" alt="" title="#img2" /> <img src="static/images/slider/slide3.jpg" alt="" title="#img3" /> <img src="static/images/slider/slide4.jpg" alt="" title="#img4" /> </div>
@@ -124,29 +56,4 @@
 			<!--END of content-->
 		</div>
 	</div>
-</div>
-<!--END of content-->
-<p class="slide"><a href="#" class="btn-slide"></a></p>
-<div id="slide-panel">
-	<!--This is the START of the follow section-->
-	<div id="follow">
-		<h3>Get Notified About My Newest Freebies & Upcoming Themes!</h3>
-		<h5>
-			<p>I do make some awesome freebies for you to use... All of them are FREE and pixel perfect!</p>
-			<p>Thanks for showing me the support by subscribing, and I'll try not to disappoint you...</p>
-		</h5>
-		<img class="star-divider" src="static/images/subscribe_divider.png" /> <a href="http://www.twitter.com/92_five">
-		<div id="follow-twitter"><img src="static/images/tweet_top.png" />
-			<h4>Follow me on twitter</h4>
-		</div>
-		</a><a href="http://eepurl.com/dqtGj">
-		<div id="follow-mail"><img src="static/images/mail_top.png" />
-			<h4>Subscribe to my newsletter</h4>
-		</div>
-		</a>
-		<h1>Thanks for that!</h1>
-	</div>
-	<!--END of follow section-->
-</div>
-</body>
-</html>
+{% endblock content %}
