templates/base.html: Get rid of social links
I've only kept the Facebook one.

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,7 @@
 <div id="menu-wrapper">
 	<div id="main-menu">
 		<ul>
-			<li><a href="index.html" {% if section_name == "home" %} class="selected" {% endif %}>Home →</a></li>
-			<li><a href="about.html" {% if section_name == "about" %} class="selected" {% endif %}>About</a></li>
+			<li><a href="about.html" {% if section_name == "about" %} class="selected" {% endif %}>About me</a></li>
 			<li><a href="portfolio.html" {% if section_name == "portfolio" %} class="selected" {% endif %}>Portfolio</a></li>
 			<li><a href="blog.html" {% if section_name == "blog" %} class="selected" {% endif %}>Blog</a></li>
 			<li><a href="contact.html" {% if section_name == "contact" %} class="selected" {% endif %}>Contact</a></li>
@@ -57,17 +56,10 @@
 		<div id="social-box">
 			<ul>
 				<li>
-					<div class="facebook"><a href="#"></a></div>
-				</li>
-				<li>
-					<div class="twitter"><a href="#"></a></div>
-				</li>
-				<li>
-					<div class="rss"><a href="#"></a></div>
+					<div class="facebook"><a href="https://www.facebook.com/drimer88"></a></div>
 				</li>
 			</ul>
 		</div>
-		<h6>Copyright © 2011 - effe</h6>
 	</div>
 	<!--END of footer-->
 </div>
