--- a/templates/about.html
+++ b/templates/about.html
@@ -4,28 +4,22 @@
 
 {% block title %}Effe - About{% endblock %}
 
-{% block section_header_text %}So want to know more about our creative team?{% endblock %}
+{% block section_header_text %}About me{% endblock %}
 
 {% block content %}
   <div class="spacer"></div>
   <div class="team-text">
     <h2>This is a bit about me...</h2>
 	<div class="star-divider"></div>
-    <h5>You can check me out via my social links!</h5>
+    <h5>You can check my CV or my portfolio for more stuff</h5>
   </div>
   <div class="spacer"></div>
   <div class="about">
-    <h5>I make some sweet designs.</h5>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel
-      Dapibus id, mattis vel, nisi. Sed pretium, ligula sollici tudin ot justo. Suspendisse potenti.Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor liber
-      sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.Sed egestas, ante et vulputate volutpat</p>
+    <h5>My background</h5>
+    <p>I started with computing at university. Fortunately, I chose to study Computer Science in the university of Granada (Spain), and that led me where I am right now, constantly learning about new things.</p>
+    <p>During my years at university, I volunteered at a Spanish government institution called Cruz Roja, bringing technology to people who couldn't manage to learn by themselfes due to disabilities, age, or any other reasons. Moreover, in my search for new fields in programming, I took online courses, such as Artifitial Intelligence at the university of Stamford.</p>
+    <p>After learning all that university could teach me, I went on a trip to London in hopes of finding new challenges, projects to work on and people to learn from.</p>
 	  <div class="spacer"></div>
-    <h5>And I offer design packages for you!</h5>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel
-      Dapibus id, mattis vel, nisi. Sed pretium, ligula sollici tudin ot justo. Suspendisse potenti.Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-	  <a class="single_image" href="static/images/about/large/pricing-table.jpg"><img src="static/images/about/large/pricing-table.jpg" width="720" height="500" alt="pricing" /></a>
   </div>
   <div class="spacer"></div>
 {% endblock content %}
