--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,56 +2,23 @@
 
 {% extends "base.html" %}
 
-{% block title %}Effe - Contact{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block scripts %}
 <!-- Load contact check -->
-<script type="text/javascript">
-function MM_validateForm() { //v4.0
-  if (document.getElementById){
-    var i,p,q,nm,test,num,min,max,errors='',args=MM_validateForm.arguments;
-    for (i=0; i<(args.length-2); i+=3) { test=args[i+2]; val=document.getElementById(args[i]);
-      if (val) { nm=val.name; if ((val=val.value)!="") {
-        if (test.indexOf('isEmail')!=-1) { p=val.indexOf('@');
-          if (p<1 || p==(val.length-1)) errors+='- '+nm+' must contain an e-mail address.\n';
-        } else if (test!='R') { num = parseFloat(val);
-          if (isNaN(val)) errors+='- '+nm+' must contain a number.\n';
-          if (test.indexOf('inRange') != -1) { p=test.indexOf(':');
-            min=test.substring(8,p); max=test.substring(p+1);
-            if (num<min || max<num) errors+='- '+nm+' must contain a number between '+min+' and '+max+'.\n';
-      } } } else if (test.charAt(0) == 'R') errors += '- '+nm+' is required.\n'; }
-    } if (errors) alert('We are sorry, but there is an error:\n'+errors);
-    document.MM_returnValue = (errors == '');
-} }
-</script>
 {% endblock %}
 
-{% block section_header_text %}Drop us a line, we don't bite!{% endblock %}
+{% block section_header_text %}Drop me a line{% endblock %}
 
 {% block content %}
   <!--This is the START of the contact section-->
   <div id="contact">
     <h5 style="margin-top:10px;">Contact us</h5>
-    <p>If you would like to contact us use this form, and we will get back to you shortly!</p>
-    <form name="contact" action="contact.php" id="contactform" method="post">
-      <div class="boxes">
-        <h6>name<span class="required">*</span></h6>
-        <div class="box">
-          <input name="name" type="text" class="input" id="sender_name" />
-        </div>
-        <h6>email<span class="required">*</span></h6>
-        <div class="box">
-          <input name="email" type="text" class="input" id="sender_email" />
-        </div>
-        <h6>message</h6>
-        <div class="msgbox">
-          <textarea name="cf_message" rows="50" cols="30" class="message" id="cf_message"></textarea>
-        </div>
-        <div class="submitbtn">
-          <input type="submit" class="button btncolor" onClick="MM_validateForm('sender_name','','R');MM_validateForm('sender_email','','RisEmail');return document.MM_returnValue" value="Send Message" />
-        </div>
-      </div>
-    </form>
+    <p>If you would like to contact me, please feel free to use any of the methods below:</p>
+    <ul>
+    <li class="contact_method">Phone number: <img src="static/images/phone_number.png"/></li>
+    <li class="contact_method">Email: <img src="static/images/email_address.png"/></li>
+    </ul>
   </div>
   <div id="contactinfo">
     <h5>Our adress is:</h5>
