templates/portfolio.html: Change the title

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -2,9 +2,9 @@
 
 {% extends "base.html" %}
 
-{% block title %}Effe - Portfolio{% endblock %}
+{% block title %}Portfolio{% endblock %}
 
-{% block section_header_text %}This is our portfolio, our latest stuff is here!{% endblock %}
+{% block section_header_text %}Things I've done or I'm doing{% endblock %}
 
 {% block content %}
   <!--This is the START of the portfolio section-->
