--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,14 +81,16 @@ ul {
 	line-height: 1.6em;
 	color: #848484;
 	font-size: 8pt;
-        margin-bottom: 10px;
+        margin-top: 5px;
+	margin-botton: 5px;
 }
 p {
 	font-family: Verdana, Arial, sans-serif;
 	line-height: 1.6em;
 	color: #848484;
 	font-size: 8pt;
-	margin-bottom: 10px;
+        margin-top: 5px;
+	margin-bottom: 5px;
 }
 h1 {
 	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
