templates/about.html: Remove "Backgroung" paragraph from About Me

--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
   <div class="spacer"></div>
   <div class="about">
     <h5>About me</h5>
-    <p>Hi! I'm a software developer. Although I've got experience
+    <p>Hi! I'm a software engineer. Although I've got experience
     with different programming languages and technologies, I would
     say I'm more familiar with Python and C than any others.</p>
 
@@ -29,14 +29,7 @@
     <p>If you'd like to know more about my professional career, you
     can take a peek at my <a href="files/CV.pdf">CV</a>.</p>
 
-    <h5>My background</h5>
-    <p>I started writing software at university. Fortunately, I chose
-    to study Computer Science in the university of Granada (Spain),
-    and that led me where I am right now, and still constantly learning about new things.</p>
-    <p>During my years at university, I volunteered at a Spanish government institution called Cruz Roja, bringing technology to people who couldn't manage to learn by themselfes due to disabilities, age, or any other reasons. Moreover, in my search for new fields in programming, I took online courses, such as Artifitial Intelligence at the university of Stamford.</p>
-    <p>After learning all that university could teach me, I took my
-    next step by moving to London in hopes of finding new challenges, projects to work on and people to learn from.</p>
-	  <div class="spacer"></div>
+    <div class="spacer"></div>
   </div>
   <div class="spacer"></div>
 {% endblock content %}
