--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 <!-- Load fancybox -->
 <script type="text/javascript" src="static/js/jquery.fancybox-1.3.4.pack.js"></script>
 <script type="text/javascript" src="static/js/jquery.easing-1.3.pack.js"></script>
-<script type="text/javascript" src="static/jss/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="static/js/jquery.mousewheel-3.0.4.pack.js"></script>
 <link rel="stylesheet" href="static/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 {% block scripts %} {% endblock %}
 </head>
