--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,30 +12,22 @@
 
 {% block content %}
   <!--This is the START of the contact section-->
-  <div id="contact">
-    <h5 style="margin-top:10px;">Contact us</h5>
+<!--  <div id="contact">
+    <h5 style="margin-top:10px;">Contact me</h5>
     <p>If you would like to contact me, please feel free to use any of the methods below:</p>
     <ul>
     <li class="contact_method">Phone number: <img src="static/images/phone_number.png"/></li>
     <li class="contact_method">Email: <img src="static/images/email_address.png"/></li>
     </ul>
-  </div>
-  <div id="contactinfo">
-    <h5>Our adress is:</h5>
-    <p>Imaginary street 14</p>
-    <p>The windy City</p>
-    <p>1345 Post code</p>
-    <br />
-    <h5>Our contact info is:</h5>
-    <p>E: info@effe.com</p>
-    <p>T: (012) 345 678</p>
-    <p>F: (456) 847 854</p>
-    <br />
-    <div class="dribbble"><a href="#">Dribbble</a></div>
-    <div class="forrst"><a href="#">mail@effe.com</a></div>
-    <div class="google"><a href="#">Google +</a></div>
-    <div class="twitter_small"><a href="http://www.twitter.com">Follow on twitter</a></div>
-    <div class="facebook_small"><a href="http://www.facebook.com">Follow on facebook</a></div>
+  </div>-->
+  <div id="contact">
+    <h5>My contact info is:</h5>
+    <p>T: +44 (0)75 9894 6479</p>
+    <br/>
+    <div class="google"><a href="mailto:albertoaguileraj@gmail.com">albertoaguileraj@gmail.com</a></div>
+    <div class="facebook_small"><a href="http://www.facebook.com/drimer88">Follow
+    on facebook</a></div>
+    <div class="linkedin_small"><a href="http://www.linkedin.com/profile/view?id=91539965">Connect on LinkedIn</a></div>
    </div>
   <!--END of contact section-->
 {% endblock %}
