templates/about.hml: Changed the URL for my CV
And added the file, because it was missing.

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@
     to do so.</p>
 
     <p>If you'd like to know more about my professional career, you
-    can take a peek at my <a href="files/CV.pdf">CV</a>.</p>
+    can take a peek at <a href="static/files/CV.pdf">my CV</a>.</p>
 
     <div class="spacer"></div>
   </div>
