--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
 <div id="topcontrol" style="position: fixed; bottom: 5px; left: 960px; opacity: 1; cursor: pointer;" title="Go to Top"></div>
 <div id="header-wrapper">
 	<div id="header">
-		<div id="logo"> <a href="index.html"><img src="static/images/logo.png" width="100" height="80" alt="logo" /></a> </div>
+		<div id="logo"> <a href="/"><img src="static/images/logo.png" width="100" height="80" alt="logo" /></a> </div>
 		<div id="header-text">
 			<h4>{% block section_header_text %}{% endblock %}</h4>
 		</div>
