templates: Remove links to my Facebook profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
 		<div id="social-box">
 			<ul>
 				<li>
-					<div class="facebook"><a href="https://www.facebook.com/drimer88"></a></div>
+					<div class="google"><a href="mailto:albertoaguileraj@gmail.com"></a></div>
 				</li>
 			</ul>
 		</div>
