portfolio: Set my own sections and hide/show elements by section
This commit starts customising the section Portfolio. It basically adds
the necessary code to make elements appear or disappear from the list,
depending on the section selected.

There are some details that need fixing:
1) The previous code creates UL elements with class="hidden". That needs to
    be removed.
2) The values that are checked against the elements tags are the exact
    text in the links. It needs to be a data attribute so that the text
    can be changed without breaking this logic.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -637,6 +637,15 @@ About us CSS
 Portfolio CSS
 ******************************************************************/
 
+.portfolio_intro {
+	padding-top: 25px;
+	width: 720px;
+	padding-bottom: 15px;
+}
+.portfolio_intro p {
+	text-align: justify;
+	font-size: 10pt;
+}
 #filter {
 	display: block;
 	height: 20px;
