portfolio: Update subsection description when selecting subsection
Before this commit, the description was always the same. Now it's updated
according to the selected subsection.

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -14,10 +14,14 @@
     <a href="#" data-tag="courses">Courses</a>
   </div>
   <img class="star-divider" src="static/images/subscribe_divider.png"/>
-  <div class="portfolio_intro" data-tags="github">
-    <h5>Projects on GitHub<h5>
+  <div class="portfolio_intro" data-tag="github">
+    <h5>My projects on GitHub<h5>
     <p>I have several small projects in my <a>GitHub profile</a>, but
     here are the ones I think can be worth mentioning.</p>
+  </div>
+  <div class="portfolio_intro" data-tag="courses">
+    <h5>Courses I've taken</h5>
+    <p>These are courses I've taken or I'm taking.</p>
   </div>
   <div class="spacer"></div>
   <div id="container">
