templates/portfolio.html: Fix closing H5 tag

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -15,7 +15,7 @@
   </div>
   <img class="star-divider" src="static/images/subscribe_divider.png"/>
   <div class="portfolio_intro" data-tag="github">
-    <h5>My projects on GitHub<h5>
+    <h5>My projects on GitHub</h5>
     <p>I have several small projects in my <a>GitHub profile</a>, but
     here are the ones I think can be worth mentioning.</p>
   </div>
