templates/portfolio.html: Link NetControl project to its page at GitHub

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -26,9 +26,9 @@
   <div class="spacer"></div>
   <div id="container">
     <ul id="stage">
-      <li data-tag="github"><a href="#"><img src="static/images/portfolio/thumbs/image(1).jpg" alt="NetControl" /></a>
+      <li data-tag="github"><a href="https://github.com/drimer/NetControl"><img src="static/images/portfolio/thumbs/image(1).jpg" alt="NetControl" /></a>
         <h6>NetControl</h6>
-        <p>Read more<a class="readmore" href="project-sample.html">view →</a></p>
+        <p>Read more<a class="readmore" href="https://github.com/drimer/NetControl">view →</a></p>
       </li>
       <li data-tag="courses"><a href="#"><img src="static/images/portfolio/thumbs/image(2).jpg"
       alt="Introduction to Artificial Intelligence" /></a>
