portfolio: Add description from course "Intro to AI"
The template from `project-sample.html` has been taken as an example for
now, but it will need changing so that it displays info about the course,
such as contents, university, statement of accomplishment, etc.

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -30,10 +30,10 @@
         <h6>NetControl</h6>
         <p>Read more<a class="readmore" href="https://github.com/drimer/NetControl">view →</a></p>
       </li>
-      <li data-tag="courses"><a href="#"><img src="static/images/portfolio/thumbs/image(2).jpg"
+      <li data-tag="courses"><a href="intro_ai.html"><img src="static/images/portfolio/thumbs/intro_ai.png"
       alt="Introduction to Artificial Intelligence" /></a>
         <h6>Introduction to Artificial Intelligence</h6>
-        <p>Read more<a class="readmore" href="project-sample.html">view →</a></p>
+        <p>Read more<a class="readmore" href="intro_ai.html">view →</a></p>
       </li>
     </ul>
   </div>
