--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -26,7 +26,7 @@
   <div class="spacer"></div>
   <div id="container">
     <ul id="stage">
-      <li data-tag="github"><a href="https://github.com/drimer/NetControl"><img src="static/images/portfolio/thumbs/image(1).jpg" alt="NetControl" /></a>
+      <li data-tag="github"><a href="https://github.com/drimer/NetControl"><img src="static/images/portfolio/thumbs/netcontrol.png" alt="NetControl" /></a>
         <h6>NetControl</h6>
         <p>Read more<a class="readmore" href="https://github.com/drimer/NetControl">view →</a></p>
       </li>
