--- a/templates/intro_ai.html
+++ b/templates/intro_ai.html
@@ -11,33 +11,39 @@
 {% block content %}
   <!--This is the START of the project-->
   <div class="project">
+      <img class="project-thumb" src="static/images/portfolio/thumbs/intro_ai.png"></img>
+      <h3 class="project-title">Introduction to Artificial Intelligence</h3>
+      <h4 class="project-subtitle">Stanford University (online)</h4>
     <div id="description">
-      <h3>This is the project title</h3>
-      <p>Ut ligula sapien, vulputate nec vulputate eget, semper ac augue. Sed varius ante leo, vel tristique libero. Aenean eros felis, auctor a congue ut, pellentesque vel elit. Vivamus imperdiet ultricies diam sit amet euismod. Duis nec purus quis neque commodo porta sit amet vitae mi. Curabitur vestibulum ante convallis enim fringilla posuere. In ac erat ut magna cursus faucibus.</p>
+      <p>This course introduces students to the basics of Artificial Intelligence, which includes machine learning, probabilistic reasoning, robotics, and natural language processing.</p>
     </div>
-    <ul id="work">
-      <li>This is the first item</li>
-      <li>This is the second item</li>
-      <li>This is the third item</li>
-      <li>This is the fourth item</li>
-    </ul>
   </div>
   <!--END of project-->
   <!--This is the START of the gallery-->
   <div class="spacer"></div>
-  <div class="project-summary">
-    <div class="one-third"> <a class="single_image" rel="gallery1" href="static/images/sample-project/large/project1.jpg"><img src="static/images/sample-project/thumbs/project1.jpg" width="220" height="132" alt="sample-project1" /></a> <a class="single_image" rel="gallery1" href="static/images/sample-project/large/project2.jpg"></a> <a class="single_image" rel="gallery1" href="static/images/sample-project/large/project3.jpg"></a>
-      <h6>24.5.2009</h6>
-      <p>Moo cards done.<a class="readmore" href="#">read more →</a></p>
-    </div>
-    <div class="one-third"> <a class="single_image" rel="gallery2" href="static/images/sample-project/large/project3.jpg"><img src="static/images/sample-project/thumbs/project3.jpg" width="220" height="132" alt="sample-project3" /></a> <a class="single_image" rel="gallery2" href="static/images/sample-project/large/project2.jpg"></a> <a class="single_image" rel="gallery2" href="static/images/sample-project/large/project1.jpg"></a>
-      <h6>1.6.2009</h6>
-      <p>Like printing?<a class="readmore" href="#">read more →</a></p>
-    </div>
-    <div class="one-third-last"> <a class="single_image" rel="gallery3" href="static/images/sample-project/large/project2.jpg"><img src="static/images/sample-project/thumbs/project2.jpg" width="220" height="132" alt="sample-project2" /></a> <a class="single_image" rel="gallery3" href="static/images/sample-project/large/project3.jpg"></a> <a class="single_image" rel="gallery3" href="static/images/sample-project/large/project1.jpg"></a>
-      <h6>22.7.2009</h6>
-      <p>Sweeeeeet.<a class="readmore" href="#">read more →</a></p>
-    </div>
+
+  <div class="project-section">
+    <h3>Syllabus</h3>
+    <ul>
+      <li>Statistics, Uncertainty, and Bayes networks</li>
+      <li>Machine Learning</li>
+      <li>Logic and Planning</li>
+      <li>Markov Decision Processes and Reinforcement Learning</li>
+      <li>Hidden Markov Models and Filters</li>
+      <li>Adversarial and Advanced Planning</li>
+      <li>Image Processing and Computer Vision</li>
+      <li>Robotics and robot motion planning</li>
+      <li>Natural Language Processing and Information Retrieval</li>
+    </ul>
+  </div>
+
+  <div class="project-section">
+    <h3>Links</h3>
+    <ul>
+      <li>Statement of accomplishment: <a href="static/files/intro_ai_statement_of_accomplishment.pdf">intro_ai_statement_of_accomplishment.pdf</a></li>
+    </ul>
+  </div>
+
   </div>
   <!--END of gallery-->
   <div class="spacer"></div>
