templates/about.html: Reword the text about me

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,13 +21,13 @@
     say I'm more familiar with Python and C than any others.</p>
 
     <p>If you'd like to see some bits of code I've written, you might
-    want to checkout my <a href="https://github.com/drimer">profile in
+    want to check out my <a href="https://github.com/drimer">profile in
     Github</a>! I try to be active by providing things I've developed
     to the open source community, though it's hard to find the time
     to do so.</p>
 
-    <p>If you'd like to know more about my professional career, you
-    can take a peek at <a href="static/files/CV.pdf">my CV</a>.</p>
+    <p>You can find a link to my CV here: <a href="static/files/CV.pdf">my CV</a>.
+    Or you can take a look at my portfolio.</p>
 
     <div class="spacer"></div>
   </div>
